--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ jobs:
   steps:
   - script: |
       git submodule update --init
-      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools\VsDevCmd.bat" -arch=amd64 -host_arch=amd64
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\Common7\Tools" -arch=amd64 -host_arch=amd64
       call "c:\opt\ros\melodic\x64\setup.bat"
       pushd catkin_ws
       vcpkg install sdl2:x64-windows
